--- a/index.html
+++ b/index.html
@@ -49,9 +49,17 @@
                         <p>
                             N.1 di 7.936 alloggi con il miglior rapporto qualità prezzo a Roma
                         </p>
-                        <p>
-                            Misure di sicurezza adottate
-                        </p>
+                        <div class="caratteristiche">
+                            <p class="nascosto">
+                                <i class="fa-solid fa-utensils"></i> Ristorante
+                            </p>
+                            <p class="nascosto">
+                                <i class="fa-solid fa-bell-concierge"></i> Servizio in camera
+                            </p>
+                            <p>
+                                <i class="fa-solid fa-hands-bubbles"></i> Misure di sicurezza adottate
+                            </p>
+                        </div>
                     </div>
                     
                     <!-- prezzi -->
@@ -59,7 +67,7 @@
                         <div class="ms_flex">
                             <!-- prezzo -->
                             <div class="prezzo">
-                                <div class="full-price">
+                                <div class="full-price red">
                                     320 &euro;
                                 </div>
 
@@ -101,7 +109,7 @@
                                     <div class="sito">
                                         Booking.com
                                     </div>
-                                    <div class="full-price sito-prezzo bold">
+                                    <div class="red sito-prezzo bold">
                                         320 &euro;
                                     </div>
                                 </a>
@@ -129,9 +137,13 @@
                                 </a>
                             </li>
 
-                            <li class="bold">
+                            <li class="bold linea">
                                 Vedi tutte le 11 offerte da 302 &euro;
+                                <div>
+                                    <i class="fa-solid fa-caret-down"></i>
+                                </div>
                             </li>
+
                         </ul>
                     </div>
 
