--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
             <!-- immagine hotel -->
             <div class="immagine-hotel">
-                <img src="img/florida-hotel.jpeg" alt="">
+                <img src="img/florida-hotel.jpeg" alt="florida hotel">
 
                 <div class="cuore">
                    <a href="#">
@@ -50,10 +50,10 @@
                             N.1 di 7.936 alloggi con il miglior rapporto qualità prezzo a Roma
                         </p>
                         <div class="caratteristiche">
-                            <p class="nascosto">
+                            <p class="small-nascosto">
                                 <i class="fa-solid fa-utensils"></i> Ristorante
                             </p>
-                            <p class="nascosto">
+                            <p class="small-nascosto">
                                 <i class="fa-solid fa-bell-concierge"></i> Servizio in camera
                             </p>
                             <p>
@@ -75,14 +75,14 @@
                                     302 &euro;
                                 </div>
 
-                                <a href="#">
+                                <a href="#" class="sito">
                                     Expedia.it
                                 </a>
                             </div>
 
                             <!-- bottone offerta -->
                             <div class="bottone-offerta">
-                                <a href="#" type="button" class="btn btn-warning ms-btn">
+                                <a href="#" class="ms-btn">
                                     Vedi l'offerta
                                 </a>
                             </div>
@@ -107,7 +107,7 @@
                             <li>
                                 <a href="#">
                                     <div class="sito">
-                                        Booking.com
+                                        Booking.com <i class="fa-solid fa-arrow-up"></i>
                                     </div>
                                     <div class="red sito-prezzo bold">
                                         320 &euro;
@@ -118,7 +118,7 @@
                             <li>
                                 <a href="#">
                                     <div class="sito">
-                                        Hotels.com
+                                        Hotels.com <i class="fa-solid fa-arrow-up"></i>
                                     </div>
                                     <div class="sito-prezzo bold">
                                         302 &euro;
@@ -129,7 +129,7 @@
                             <li>
                                 <a href="#">
                                     <div class="sito">
-                                        Official Hotel
+                                        Official Hotel <i class="fa-solid fa-arrow-up"></i>
                                     </div>
                                     <div class="sito-prezzo bold">
                                         304 &euro;
